# RestAPI

./: 4.2  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 1c667caeca94_init.py  76fabc642ec7_init.py  7c2b71741504_init.py  d7d77766153c_init.py  e189e45ce003_init.py
src/: schemas.py
src/conf/: config uncovered.py  config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  email.py
src/services/: auth.py  email.py
src/services/templates/: example_email.html  reset_email.html
tests/: conftest.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
